todos-container overflow bug fixed

--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -17,7 +17,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 0;
+    display: none;
 }
   
 body {
