--- a/src/components/placeholder/placeholder.module.scss
+++ b/src/components/placeholder/placeholder.module.scss
@@ -1,5 +1,9 @@
 .placeholder {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
     font-size: 1rem;
     font-weight: 600;
     background-color: #666;
