--- a/src/components/todo-container/todo-container.module.scss
+++ b/src/components/todo-container/todo-container.module.scss
@@ -31,6 +31,7 @@
         position: relative;
         flex: 99;
         padding: .5rem .8rem 0;
-        overflow-y: auto;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 }
